# game-test

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: deploy-pages.yml
game/: Cargo.toml  Trunk.toml  index.html
game/src/: components.rs  main.rs
game/src/systems/: background.rs  camera.rs  levels.rs  particles.rs  player.rs  startup.rs
level_editor/: Cargo.toml
level_editor/src/: main.rs
level_format/: Cargo.toml
level_format/src/: lib.rs
levels/: level1.toml  level2.toml
src/: config.rs  main.rs  resources.rs
src/systems/: background.rs  levels.rs  mod.rs  particles.rs  player.rs  startup.rs  ui.rs
