[package]
name = "game-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "png",
  "dynamic_linking",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
