[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_ui",
  "bevy_text",
  "bevy_asset",
  "png",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
level_format = { path = "../level_format" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# On wasm, avoid dynamic_linking and enable a web backend feature if needed
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_ui",
  "bevy_text",
  "bevy_asset",
  "png",
  "webgl2",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["rng-getrandom"] }
gloo-net = { version = "0.5" }
wasm-bindgen-futures = { version = "0.4" }
futures-lite = { version = "2" }
crossbeam-channel = { version = "0.5" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
