[package]
name = "level_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.28", default-features = true, features = ["wgpu"] }
egui = "0.28"
# File dialogs
rfd = "0.14"
# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Shared types
level_format = { path = "../level_format" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
